--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,14 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "ESNext",
-    "moduleResolution": "Bundler",
+    "target": "es2015",
+    "module": "esnext",
+    "lib": ["esnext"],
+    "moduleResolution": "node",
+    "isolatedModules": true,
     "strict": true,
-    "types": ["k6"],
-    "skipLibCheck": true
+    "noImplicitAny": false,
+    "esModuleInterop": true,
+    "types": ["k6"]
   },
-  "include": ["**/*.ts"]
+  "include": ["src/**/*"]
 }
